# file-org-kit

./: README.md  pyproject.toml
file_org/: __init__.py  organizer.py
file_org_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
